# secret-api

./: .env  package-lock.json  package.json
api/: nest-cli.json  package-lock.json  package.json  tsconfig.json
api/src/: app.controller.ts  app.module.ts  main.ts  mikro-orm.config.ts
api/src/migrations/: .snapshot-secret-exam.json  Migration20230122122623.ts  Migration20230304100215.ts  Migration20230304210242.ts  Migration20230304213949.ts  Migration20230304215143.ts  Migration20230304220758.ts  Migration20230305104018.ts  Migration20230305111312.ts  Migration20230305190348.ts  Migration20230316190319.ts  Migration20230318184529.ts  Migration20230318190325.ts  Migration20230318191529.ts  Migration20230318193030.ts  Migration20230319202242.ts  Migration20230319202512.ts  Migration20230319202558.ts  Migration20230319202624.ts  Migration20230323082046.ts  Migration20230323082137.ts  Migration20230327050452.ts  Migration20230417195407.ts
api/src/shared/: index.ts
client/: openapi-config.ts  package-lock.json  package.json  tsconfig.json
client/patches/: secretjs+1.8.1.patch
client/src/components/: ClientProvider.tsx
client/src/hooks/: useAuth.ts  useExam.ts
client/src/pages/: _app.tsx  _document.tsx  index.tsx  styles.module.css  test.tsx
client/src/services/: merkleTree.ts  secretjs.service.ts  storage.service.ts  types.ts
client/src/store/: api.ts  authMiddleware.ts  index.ts
client/src/styles/: globals.css
contracts/: Cargo.toml
contracts/src/: contract.rs  errors.rs  exam.rs  hashed_addr.rs  ipfs.rs  lib.rs  merkle_tree.rs  msg.rs  state.rs
exam-registry/: .gitignore  Cargo.toml  Makefile
exam-registry/.cargo/: config
exam-registry/schema/: execute_msg.json  ipfs_info.json  query_msg.json
exam-registry/src/: contract.rs  exam.rs  ipfs.rs  lib.rs  merkle_tree.rs  msg.rs  state.rs
exam-registry/tests/: integration.ts  package-lock.json  package.json
ipfs/: package-lock.json  package.json
ipfs/src/: index.ts
src/: app.module.ts  main.ts  micro-orm.config.ts  mikro-orm.config.ts
src/entities/: Base.ts  Exam.ts  User.ts  index.ts
src/migrations/: .snapshot-secret-exam.json  Migration20230112211022.ts  Migration20230121175741.ts  Migration20230122115804.ts  Migration20230122120723.ts
src/shared/: index.ts
(+133 files in other folders)
