[package]
name        = "secret-exam"
version     = "0.0.0"
edition     = "2021"
publish     = false
license     = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1
panic            = 'abort'
incremental      = false
overflow-checks  = true

[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
serde = { version = "=1.0.103", default-features = false, features = [
    "derive",
] }
thiserror = "1.0"
sha2 = "0.10.6"
rs_merkle = "1.2"
bincode = "*"
