[package]
name    = "secret-exam"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1
panic            = 'abort'
incremental      = false
overflow-checks  = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces

[dependencies]
cosmwasm-std     = { version = "1.0.0", default-features = false }
serde            = { version = "1.0.147", default-features = false, features = ["derive"] }
schemars         = "0.8.11"
cosmwasm-storage = { version = "1.0.0", default-features = false }
rs_merkle        = { git = "https://github.com/FloppyDisck/rs-merkle", rev = "b35c0aa" }


[patch.crates-io]
cosmwasm-std     = { git = "https://github.com/scrtlabs/cosmwasm", rev = "f7e2b1dbf11e113e258d796288752503a5012367", package = "cosmwasm-std", default-features = false }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", rev = "f7e2b1dbf11e113e258d796288752503a5012367", package = "cosmwasm-storage", default-features = false }
